# Actix-web-backend

./: .env  Cargo.toml
migrations/: 20250308160419_user_table.down.sql  20250308160419_user_table.up.sql
src/: config.rs  db.rs  dtos.rs  error.rs  models.rs
src/utils/: password.rs  token.rs
